--- a/datasets/drug_exposure/pbt_aspects.yml
+++ b/datasets/drug_exposure/pbt_aspects.yml
@@ -10,8 +10,8 @@ schema:
       mappings: []
       tags: []
   - name: person_id
-    type: long
-    nullable: true
+    type: integer
+    nullable: false
     metadata:
       description: ''
       mappings: []
